# dotfiles

./: .gitignore  pyproject.toml
.cursor/rules/backend/: fastapi.mdc
.cursor/rules/database/: fundamentals.mdc  mysql.mdc  postgresql.mdc  supabase.mdc
.cursor/rules/deployment/: deployment.mdc
.cursor/rules/general/: api-design.mdc  documentation.mdc  fundamental-principles.mdc  security.mdc  testing.mdc
.cursor/rules/integration/: create-rules.mdc  memory.mdc  rules-analytics.mdc  task-lists.mdc  thinking.mdc
.cursor/rules/python/: general-style.mdc
cursor/rules/flutter/: 2.cursorrules
cursor/rules/general/: .cursorrules
cursor/rules/python/: analysis.cursorrules
cursor/rules/python/containerization/: .cursorrules
cursor/rules/python/fastapi/: microservice.cursorrules  scalable2.cursorrules
prompts/finance/option/: prompt
